@@ -2,6 +2,10 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  19 Sep 2007; Russell Harmon (eatnumber1) <eatnumber1@gmail.com>
+  +aufs-utils-0.1_pre20070910.ebuild, +aufs-utils-0.1_pre20070917.ebuild:
+  Version bump
+
   04 Sep 2007; Jakub Moc <jakub@gentoo.org>
   -aufs-utils-0.1_pre20070812.ebuild:
   Nuke old
